[package]
name = "sea-orm-typed-id"
version = "0.1.0"
edition = "2021"
authors = ["Rene Klacan <rene@klacan.sk>"]
license = "MIT"
description = "A Rust library that provides a macro for generating type-safe database ID types for SeaORM."
repository = "https://github.com/reneklacan/sea-orm-typed-id"

[lib]
doctest = false

[dependencies]
sea-orm = { version = "^1.0" }
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_json = { version = "^1.0", optional = true }
utoipa = { version = "^5.0", optional = true }

[features]
# default = ["serde", "rustls", "postgres"]
default = []
all = ["serde", "rustls", "postgres", "utoipa"]
serde = ["dep:serde", "dep:serde_json", "sea-orm/with-json"]
rustls = ["sea-orm/runtime-tokio-rustls"]
postgres = ["sea-orm/postgres-array"]
utoipa = ["dep:utoipa"]

[package.metadata.feature-matrix]
include = ["all", "serde"]
