[package]
name = "sea-orm-typed-id"
version = "0.2.0"
edition = "2021"
authors = ["Rene Klacan <rene@klacan.sk>"]
license = "MIT"
description = "A Rust library that provides a macro for generating type-safe database ID types for SeaORM."
repository = "https://github.com/reneklacan/sea-orm-typed-id"

[lib]
doctest = false

[dependencies]
sea-orm = { version = "^1.1.1", default-features = false, features = [
  "macros",
  "with-json",
  "with-rust_decimal",
  "with-bigdecimal",
] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
utoipa = { version = ">=4.0", optional = true }
tracing = { version = "^0.1", optional = true }

[features]
default = []
all = ["rustls", "postgres", "utoipa"]
rustls = ["sea-orm/runtime-tokio-rustls"]
postgres = ["sea-orm/postgres-array"]
utoipa = ["dep:utoipa"]
tracing = ["dep:tracing"]
