[package]
name = "sea-orm-typed-id"
version = "0.4.1"
edition = "2021"
authors = ["Rene Klacan <rene@klacan.sk>"]
license = "MIT"
description = "A Rust library that provides a macro for generating type-safe database ID types for SeaORM."
repository = "https://github.com/reneklacan/sea-orm-typed-id"

[lib]
doctest = false

[dependencies]
sea-orm = { version = "^1.1", default-features = false, features = [
  "macros",
  "with-json",
  "with-rust_decimal",
  "with-bigdecimal",
] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
schemars = { version = "^1.0", optional = true }
utoipa = { version = ">=4.0", optional = true }

[features]
default = []
all = ["rustls", "postgres", "schema", "utoipa"]
rustls = ["sea-orm/runtime-tokio-rustls"]
postgres = ["sea-orm/postgres-array"]
schema = ["dep:schemars"]
utoipa = ["dep:utoipa"]
